# rendering

./: .gitignore  Cargo.toml  README.md  clippy.txt  cornell.fc.hdr  crates.js  ddd.txt  dielectric.diff.hdr  index.html  index.md  metro.hdr  rad_dielectric.fc.hdr  room.fc.hdr  search-index.js  settings.html  source-files.js
.github/workflows/: build.yaml  coverage.yaml  docs.yaml  style.yaml  tests.yaml
benches/: benchmark.rs
docs/: index.html
docs/validation/: daylight_coefficient.html  ray_tracer.html
implementors/matrix/: trait.OneZero.js
implementors/rand_core/: trait.SeedableRng.js
rendering/: all.html  constant.N_CHANELS.html  constant.N_CHANNELS.html  constant.PI.html  enum.Wavelengths.html  index.html  sidebar-items.js  struct.BackwardMetropolis.html  struct.MutationSet.html  struct.Ray.html  struct.RayTracer.html  struct.RayTracerHelper.html  struct.RestartRay.html  struct.Scene.html  struct.Spectrum.html  trait.Mutation.html  type.Float.html  type.RefCount.html
rendering/backward_metropolis/: index.html  sidebar-items.js
rendering/bvh/: enum.FlatNode.html  enum.Node.html  fn.get_bucket_index.html  index.html  sidebar-items.js  struct.BoundingVolumeTree.html  struct.BucketInfo.html  struct.FlatInterior.html  struct.FlatNode.html  struct.Interior.html  struct.Leaf.html  struct.ObjectInfo.html  type.FlatLeaf.html
rendering/camera/: enum.Camera.html  index.html  sidebar-items.js  struct.CameraSample.html  struct.Film.html  struct.PinholeCam.html  struct.View.html  trait.Camera.html
rendering/colour/: constant.RADIANCE_COEFFICIENTS.html  constant.WHITE_EFFICACY.html  index.html  sidebar-items.js  struct.RGBSpectrum.html  struct.Spectrum.html  type.ColourMatrix.html  type.Spectrum.html
rendering/colour_matrix/: fn.average_matrix.html  fn.colour_matrix_to_luminance.html  fn.colour_matrix_to_radiance.html  fn.read_colour_matrix.html  fn.read_matrix.html  fn.save_colour_matrix.html  fn.save_matrix.html  index.html  type.ColourMatrix.html
rendering/colourmap/: enum.Colourmap.html  fn.map_linear_colour.html  fn.map_linear_spectrum.html  index.html  sidebar-items.js
rendering/d_coefficients/: index.html  sidebar-items.js  struct.DCFactory.html
rendering/film/: index.html  struct.Film.html
rendering/from_obj/: index.html  sidebar-items.js  struct.ObjTriangle.html
rustdoc/: .rustc_info.json  .rustdoc_fingerprint.json
scompare/: all.html  enum.ArgColourMap.html  fn.main.html  index.html  struct.Inputs.html
sfalsecolor/: all.html  enum.ArgColourMap.html  fn.main.html  index.html  struct.Inputs.html
sfluxmtx/: all.html  fn.main.html  index.html  sidebar-items.js  struct.Inputs.html
spict/: all.html  fn.main.html  index.html  sidebar-items.js  struct.Inputs.html  struct.Triplet.html
src/: bidirectional_path_tracer.rs  bin.rs  bvh.rs  camera.rs  colour.rs  colour_matrix.rs  colourmap.rs  d_coefficients.rs  daylight_coefficients.rs  distant_source.rs  film.rs  from_obj.rs  from_radiance.rs  from_simple_model.rs  image.rs  interaction.rs  lib.rs  lights.rs  material.rs  primitive.rs  primitive_samplers.rs  rand.rs  ray.rs  ray_caster.rs  ray_tracer.rs  sampleable_trait.rs  samplers.rs  scene.rs  subpath.rs  triangle.rs  vertex.rs
test_data/: casa2.mtl  cornell.rad  dc_rust.mtx  diffuse_fc.hdr  exterior_0_dielectric.rad  exterior_0_diffuse_plastic.rad  exterior_0_mirror.rad  exterior_0_specularity.rad  full_dc.mtx  octree.oct  points.pt  render.sh  room.rad  room.spl  white_sky.rad
tests/: glow_sphere_scene.rs  laptop.rs  points.pts  render_cornell.rs  render_glow_sphere.rs  render_materials.rs  render_room.rs  scenes.rs  sim_radiance.sh  test_scenes.rs  validate.rs  validate_dc.rs  validate_ray_tracer.rs
validation/: daylight_coefficient.html  ray_tracer.html
(+866 files in other folders)
