[package]
name = "rendering"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple_model = {git = "https://github.com/SIMPLE-BuildingSimulation/simple_model.git"}
matrix = {git = "https://github.com/SIMPLE-BuildingSimulation/matrix.git"}
geometry3d = {git = "https://github.com/SIMPLE-BuildingSimulation/geometry3d.git"}
solar = {git = "https://github.com/SIMPLE-BuildingSimulation/solar.git"}
calendar = { git = "https://github.com/SIMPLE-BuildingSimulation/calendar.git" }
rand = { version = "0.8.5", features=["small_rng"]}
rayon = {version = "1.5", optional = true}
clap = "3.0.14"

[[bin]]
name = "spict"
path = "src/bin.rs"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
path = "./benches/benchmark.rs"
harness = false

[features]
default = [] 
float = ["simple_model/float","geometry3d/float", "matrix/float",  "solar/float"]
parallel = ["geometry3d/parallel", "rayon"]
textures = ["geometry3d/textures"]


[profile.release]
debug=true
lto = true
codegen-units = 1
opt-level=3


[[test]]
name = "glow_sphere"
path = "tests/render_glow_sphere.rs"

[[test]]
name = "render_materials"
path = "tests/render_materials.rs"

[[test]]
name = "test_render_laptop"
path = "tests/laptop.rs"

[[test]]
name = "test_render_room"
path = "tests/render_room.rs"

[[test]]
name = "test_render_cornell"
path = "tests/render_cornell.rs"